添加查询实例任务记录api
